--- a/apps/http-backend/package.json
+++ b/apps/http-backend/package.json
@@ -14,7 +14,6 @@
     "@repo/fullstack-common": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/bcrypt": "^5.0.2",
-    "@types/body-parser": "^1.19.5",
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
@@ -34,8 +33,7 @@
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
     "passport-github2": "^0.1.12",
-    "passport-google-oauth20": "^2.0.0",
-    "zod": "^3.24.2"
+    "passport-google-oauth20": "^2.0.0"
   },
   "keywords": [],
   "author": "",
