--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -10,13 +10,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "@repo/typescript-config": "workspace:*"
+    "@repo/typescript-config": "workspace:*",
+    "prisma": "^6.12.0"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "6.5.0",
-    "prisma": "^6.5.0"
+    "@prisma/client": "6.12.0"
   }
 }
