--- a/apps/ws-backend/package.json
+++ b/apps/ws-backend/package.json
@@ -13,11 +13,13 @@
     "@repo/db": "workspace:*",
     "@repo/fullstack-common": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/ws": "^8.18.1",
     "dotenv": "^16.6.1",
     "jsonwebtoken": "^9.0.2",
     "ws": "^8.18.3"
+  },
+  "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/ws": "^8.18.1"
   },
   "keywords": [],
   "author": "",
