--- a/docker/Dockerfile.backend
+++ b/docker/Dockerfile.backend
@@ -1,50 +1,58 @@
-
 FROM node:24-alpine AS builder
 
-WORKDIR /app
+WORKDIR /app  
 
-RUN npm install -g pnpm
+RUN npm install -g pnpm  
 
-COPY ./package.json ./package.json
+COPY ./package.json ./package.json 
 COPY ./pnpm-lock.yaml ./pnpm-lock.yaml
 COPY ./pnpm-workspace.yaml ./pnpm-workspace.yaml
-COPY ./turbo.json ./turbo.json
-COPY ./packages ./packages
-COPY ./apps/http-backend/ ./apps/http-backend/
+COPY ./turbo.json  ./turbo.json
+COPY ./packages/typescript-config ./packages/typescript-config 
+COPY ./packages/db/package.json ./packages/db/package.json
+COPY ./packages/db/tsconfig.json ./packages/db/tsconfig.json 
+COPY ./packages/fullstack-common/package.json ./packages/fullstack-common/package.json
+COPY ./packages/fullstack-common/tsconfig.json ./packages/fullstack-common/tsconfig.json 
+COPY ./apps/http-backend/package.json ./apps/http-backend/package.json
+COPY ./apps/http-backend/tsconfig.json ./apps/http-backend/tsconfig.json
+COPY ./apps/http-backend/turbo.json ./apps/http-backend/turbo.json
 
-RUN pnpm install --frozen-lockfile
+RUN pnpm install --frozen-lockfile 
 
-RUN pnpm db:generate
-RUN pnpm build
+COPY ./packages/db/prisma ./packages/db/prisma
+COPY ./packages/db/src ./packages/db/src
+COPY ./packages/fullstack-common/src ./packages/fullstack-common/src
+COPY ./apps/http-backend/src ./apps/http-backend/src
+
+RUN pnpm db:generate 
+RUN pnpm build  
+
 
 FROM node:24-alpine AS runner
 
 WORKDIR /app
 
-RUN npm install -g pnpm
+RUN npm install -g pnpm  
 
-RUN addgroup --system --gid 1001 nodejs
-RUN adduser --system --uid 1001 nodejs
-
-COPY ./package.json ./package.json
+COPY ./package.json ./package.json 
 COPY ./pnpm-lock.yaml ./pnpm-lock.yaml
 COPY ./pnpm-workspace.yaml ./pnpm-workspace.yaml
-COPY ./turbo.json ./turbo.json
-COPY ./packages ./packages
+COPY ./turbo.json  ./turbo.json
+COPY ./packages/typescript-config ./packages/typescript-config 
+COPY ./packages/db/package.json ./packages/db/package.json
+COPY ./packages/fullstack-common/package.json ./packages/fullstack-common/package.json
 COPY ./apps/http-backend/package.json ./apps/http-backend/package.json
+COPY ./apps/http-backend/turbo.json ./apps/http-backend/turbo.json
 
-RUN pnpm install --prod --frozen-lockfile
+RUN pnpm install --prod --frozen-lockfile 
 
-COPY --from=builder --chown=nodejs:nodejs /app/apps/http-backend/dist ./apps/http-backend/dist
-COPY --from=builder --chown=nodejs:nodejs /app/packages/db ./packages/db
-COPY --from=builder --chown=nodejs:nodejs /app/apps/http-backend/node_modules/@repo/db ./apps/http-backend/node_modules/@repo/db
+COPY ./packages/db/prisma ./packages/db/prisma
+COPY ./packages/db/src ./packages/db/src
+COPY ./packages/fullstack-common/src ./packages/fullstack-common/src
+COPY --from=builder /app/apps/http-backend/dist ./apps/http-backend/dist
+COPY --from=builder /app/node_modules/.pnpm/@prisma+client@6.12.0_prisma@6.12.0_typescript@5.8.3__typescript@5.8.3/ ./node_modules/.pnpm/@prisma+client@6.12.0_prisma@6.12.0_typescript@5.8.3__typescript@5.8.3/ 
+COPY ./packages/db/.env ./packages/db/.env
+COPY ./apps/http-backend/.env ./apps/http-backend/.env
 
-RUN pnpm store prune
-
-USER nodejs
-
-EXPOSE 4000
-
-ENV NODE_ENV=production
-
-CMD ["pnpm", "start:backend"]
+EXPOSE 4000  
+CMD ["pnpm","start:backend"]    
