--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "devDependencies": {
     "prettier": "^3.6.2",
     "turbo": "^2.5.5",
-    "typescript": "5.8.2"
+    "typescript": "^5.8.3"
   },
   "packageManager": "pnpm@9.0.0",
   "engines": {
