Added Frontend Dockerfile and updated pnpm

--- a/docker/Dockerfile.frontend
+++ b/docker/Dockerfile.frontend
@@ -1,25 +1,71 @@
-FROM node:22-alpine
+FROM node:24-alpine AS base
 
-# Install pnpm
+
+FROM base AS builder
+
+WORKDIR /app
+
 RUN npm install -g pnpm
 
-WORKDIR /usr/src/app
+ARG HTTP_URL
+ARG WS_URL
+ARG FE_URL
 
-# Copy package files
-COPY ./packages ./packages
+COPY ./package.json ./package.json
 COPY ./pnpm-lock.yaml ./pnpm-lock.yaml
 COPY ./pnpm-workspace.yaml ./pnpm-workspace.yaml
-COPY ./package.json ./package.json
 COPY ./turbo.json ./turbo.json
-COPY ./apps/web ./apps/web
 
-# Install dependencies
-RUN pnpm install
-RUN pnpm run db:generate
-RUN pnpm run build
+COPY ./packages/typescript-config ./packages/typescript-config
 
+COPY ./packages/fullstack-common/package.json ./packages/fullstack-common/package.json
+COPY ./packages/fullstack-common/tsconfig.json ./packages/fullstack-common/tsconfig.json
+
+COPY ./apps/doodleart-frontend ./apps/doodleart-frontend
+
+RUN pnpm install --frozen-lockfile
+
+COPY ./packages/fullstack-common/src ./packages/fullstack-common/src
+
+RUN NEXT_PUBLIC_HTTP_URL=${HTTP_URL} NEXT_PUBLIC_WS_URL=${WS_URL} NEXT_PUBLIC_FE_URL=${FE_URL}   pnpm build
+
+
+FROM base AS runner
+
+ENV NODE_ENV=production
+
+WORKDIR /app
+
+RUN npm install -g pnpm
+
+COPY ./package.json ./package.json
+COPY ./pnpm-lock.yaml ./pnpm-lock.yaml
+COPY ./pnpm-workspace.yaml ./pnpm-workspace.yaml
+COPY ./turbo.json ./turbo.json
+
+COPY ./packages/typescript-config ./packages/typescript-config
+
+COPY ./packages/fullstack-common/package.json ./packages/fullstack-common/package.json
+
+COPY ./apps/doodleart-frontend/package.json ./apps/doodleart-frontend/package.json
+
+RUN pnpm install --prod --frozen-lockfile
+
+COPY ./packages/fullstack-common/src ./packages/fullstack-common/src
+COPY --from=builder /app/apps/doodleart-frontend/.next ./apps/doodleart-frontend/.next
+COPY --from=builder /app/apps/doodleart-frontend/public ./apps/doodleart-frontend/public
 
 EXPOSE 3000
 
-# Start the web application
-CMD ["pnpm", "start:web"]
+CMD ["pnpm","start:web"]
+
+
+
+
+
+
+
+
+
+
+
