--- a/apps/doodleart-frontend/package.json
+++ b/apps/doodleart-frontend/package.json
@@ -9,14 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@repo/fullstack-common": "workspace:*",
     "axios": "^1.10.0",
     "jose": "^6.0.12",
-    "lucide-react": "^0.488.0",
+    "lucide-react": "^0.525.0",
     "next": "15.4.2",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "@repo/ui": "workspace:*",
-    "@repo/fullstack-common": "workspace:*"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
