--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,12 +2,12 @@ name : CI
 
 on:
   push:
-    branches:["main"]
+    branches: ["main"]
   pull_request:
-    branches:["main"]
+    branches: ["main"]
 
 jobs:
-  lint:
+  linting:
     name: Lint & Format
     runs-on: ubuntu_latest
     steps:
@@ -22,8 +22,8 @@ jobs:
       - run: pnpm install
       - run: pnpm lint
       - run: pnpm format --check
-      
-  type-check:
+
+  type-checking:
     name: Type Check
     runs-on: ubuntu-latest
     steps:
