Checking CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,44 +1,50 @@
-name : CI
-
+name: CI
+ 
 on:
   push:
     branches: ["main"]
   pull_request:
-    branches: ["main"]
-
+    types: [opened, synchronize]
+ 
 jobs:
-  linting:
-    name: Lint & Format
-    runs-on: ubuntu_latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v3
-        with:
-          version: 8
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: 'pnpm'
-      - run: pnpm install
-      - run: pnpm lint
-      - run: pnpm format --check
-
-  type-checking:
-    name: Type Check
+  build:
+    name: Build, Lint and Check
+    timeout-minutes: 15
     runs-on: ubuntu-latest
+ 
     steps:
-      - uses: actions/checkout@v4
+      - name: Check out code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
+ 
       - uses: pnpm/action-setup@v3
         with:
           version: 8
-      - uses: actions/setup-node@v4
+ 
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: 'pnpm'
-      - run: pnpm install
-      - run: pnpm check-types
+ 
+      - name: Install dependencies
+        run: pnpm install
 
+      - name: Generate Prisma client
+        run: pnpm db:generate
 
+      - name: Check types
+        run: pnpm check-types
+
+      - name: Lint
+        run: pnpm lint
+
+      - name: Check formatting
+        run: pnpm format --check
+
+      - name: Build
+        run: pnpm build
 
 
 
