--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ on:
     branches: ["main"]
   pull_request:
     branches: ["main"]
+    # types: [opened, synchronize]
 
 jobs:
   lint:
@@ -14,16 +15,49 @@ jobs:
       - uses: actions/checkout@v4
       - uses: pnpm/action-setup@v3
         with:
-          version: 8
+          version: 10
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 24
           cache: 'pnpm'
       - run: pnpm install
       - run: pnpm lint
       - run: pnpm format --check
-
   
+  type-check:
+     name: Code Type-Checking
+     runs-on: ubuntu-latest
+     steps:
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v3
+        with: 
+          version: 10
+      - uses: actions/setup-node@v4
+        with:
+          version: 24
+          cache: 'pnpm'
+      
+      - run: pnpm install
+      - run: pnpm lint
+      - run: pnpm format --check
+
+  build:
+    name: Build
+    runs-on: ubuntu-latest
+    steps: 
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v3
+        with:
+          version: 10
+      - uses: actions/setup-node@v4
+        with:
+          version: 24
+          cache: 'pnpm'
+        
+      - run: pnpm install
+      - run: pnpm db:generate
+      - run: pnpm build
+
 
 
 
