Added full CD workflow

--- a/.github/workflows/cd_frontend.yml
+++ b/.github/workflows/cd_frontend.yml
@@ -1,8 +1,7 @@
-name: Continuous Deployment(CD) Backend
-
+name: Continuous Deployment(CD) Frontend
 on:
   workflow_run:
-    workflows: ["CI"] # This must match the name in ci.yml exactly
+    workflows: ["CI"]
     types:
       - completed
 
@@ -23,6 +22,6 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
-          file: ./docker/Dockerfile.backend
+          file: ./docker/Dockerfile.frontend
           push: true
-          tags: vivekdshah/doodleart-http-app:${{ github.sha }}
+          tags: vivekdshah/doodleart-fe-app:${{ github.sha }}
