Added complete CD workflow

--- a/.github/workflows/cd_frontend.yml
+++ b/.github/workflows/cd_frontend.yml
@@ -25,3 +25,7 @@ jobs:
           file: ./docker/Dockerfile.frontend
           push: true
           tags: vivekdshah/doodleart-fe-app:${{ github.sha }}
+          build-args: |
+            HTTP_URL=${{ secrets.HTTP_URL }}
+            WS_URL=${{ secrets.WS_URL }}
+            FE_URL=${{ secrets.FE_URL }}
