--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
           version: 10
       - uses: actions/setup-node@v4
         with:
-          version: 24
+          node-version: 24
           cache: 'pnpm'
       
       - run: pnpm install
@@ -51,7 +51,7 @@ jobs:
           version: 10
       - uses: actions/setup-node@v4
         with:
-          version: 24
+          node-version: 24
           cache: 'pnpm'
         
       - run: pnpm install
