--- a/.github/workflows/cd_ws.yml
+++ b/.github/workflows/cd_ws.yml
@@ -1,14 +1,16 @@
 name: Continuous Deployment(CD) WS
 
 on:
-  workflow_run:
-    workflows: ["CI"]
-    types:
-      - completed
+  # workflow_run:
+  #   workflows: ["CI"]
+  #   types:
+  #     - completed
+  push:
+    branches: ["main"]
 
 jobs:
   build:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    name: Continous Deployment of WS server
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
