--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -11,12 +11,15 @@
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
-    "prisma": "^6.12.0"
+    "@types/node": "^25.0.2",
+    "prisma": "6.12.0",
+    "tsx": "^4.21.0"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "6.12.0"
+    "@prisma/client": "6.12.0",
+    "dotenv": "^17.2.3"
   }
 }
