--- a/apps/doodleart-frontend/package.json
+++ b/apps/doodleart-frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.13.2",
     "jose": "^6.1.3",
     "lucide-react": "^0.561.0",
+    "nanoid": "^5.1.6",
     "next": "16.0.10",
     "react": "^19.2.3",
     "react-dom": "^19.2.3"
