Added two layer canvas architecture and theme/styling to app

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -7,9 +7,7 @@ onlyBuiltDependencies:
   - '@prisma/engines'
   - '@tailwindcss/oxide'
   - core-js-pure
+  - esbuild
   - prisma
   - sharp
   - unrs-resolver
-
-
-
