--- a/apps/doodleart-frontend/package.json
+++ b/apps/doodleart-frontend/package.json
@@ -24,6 +24,7 @@
     "@types/node": "^20.19.9",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "baseline-browser-mapping": "^2.9.19",
     "eslint": "^9.39.2",
     "eslint-config-next": "16.0.10",
     "tailwindcss": "^4.1.18",
