--- a/apps/http-backend/package.json
+++ b/apps/http-backend/package.json
@@ -21,6 +21,7 @@
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "nanoid": "^5.1.6",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
     "passport-github2": "^0.1.12",
